220

- Change target Java version to 17.
- Make CpuTimer user time collection optional.
- Add custom ticker support to CpuTimer.
- Add primitive methods to TDigest stats to avoid unnecessary boxing.

219

- Report errors thrown from Guice modules during bootstraping together
  with errors from config validator.
- Update to Jetty 9.4.49.v20220914.
- Upgrade to Airbase 130.
- Upgrade to JOL 0.16 in stats.

218

- Add method add(value, count) to the DistributionStat.
- Update to Byte Buddy 1.12.13.

217

- Auto detect records for Jackson serialization

216

- Remove dbpool module.
- Trim whitespace when loading configuration of log levels.
- Support Jersey programmatic resources.
- Add SwitchModule.
- Add AsyncSemaphore.processAll() method.
- Regenerate testing certificates using secure crypto algorithms.

215

- Upgrade to MySQL Connector/J 8.0.22 in dbpool.
- Remove Executed class from bootstrap module.
- Add "bootstrap.quiet" configuration property.

214

- Fix log file rename in launcher script.

212

- Fix log file rename on startup.

211

- Fix deadlock in logging error reporting.

210

- Add support for logging to a tcp socket by setting "log.path" to "tcp://host:port".

209

- Add @ConfigHidden annotation to prevent listing config values.
  These can be shown via the "config.includeHidden" system property.
- Add http proxy support in http client
- Add IP_ENCODED_AS_HOSTNAME to internal address source. This ensures
  compatibility with SNI when using automatic HTTPS configuration.
- Add new rolling log file implementation. The legacy implementation can be used
  by setting the "log.legacy-implementation.enabled" config property.
- Fix Jetty SNI for Java 17 by removing support for literal IP addresses,
  as these are not allowed per the TLS specification.

208

- Add support for basic JSON logging.
- Only bind HTTPS config for HTTP server when HTTPS is enabled.
- Make strict config default for Bootstrap. Non-strict is deprecated.